# wu_dict_demo

./: .gitignore  EXTRACT.md  README.md  SPEC.md  pyproject.toml
data/: char_base.json  words.json
scripts/: extract_wupin_ipa.py
src/wu_pinyin/: __init__.py  __main__.py  builder.py  cli.py  converter.py  ipa.py  loader.py
